<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarahgardiner.sample430.LoginPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_here"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="136dp"
        android:layout_height="44dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/UserLoginButton"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/login_as_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onUserLoginClick"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/adminLoginButton"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login_as_admin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onAdminLoginClick"
        app:layout_constraintTop_toBottomOf="@+id/UserLoginButton" />
</android.support.constraint.ConstraintLayout>
